--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "scripts": {
     "ng": "ng",
-    "heroku prebuild": "npm cache clean",
+    "heroku prebuild": "npm cache clean && npm install --dev && npm install",
     "start": "python3 server.py",
-    "postinstall": "ng build --aot --prod",
+    "heroku-postbuild": "ng build --aot --prod",
     "deploy": "git push origin master && git push heroku master",
     "fdeploy": "git push -f origin master && git push -f heroku master",
     "build": "ng build --prod",
@@ -19,9 +19,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
+    "@angular/cli": "1.6.2",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/animations": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
@@ -33,8 +35,6 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.2",
-    "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
