--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   },
   "scripts": {
     "ng": "ng",
-    "heroku prebuild": "npm cache clean && npm install --dev && npm install",
+    "heroku-prebuild": "npm cache clean --force && npm install --dev && npm install",
     "start": "python3 server.py",
     "heroku-postbuild": "ng build --aot --prod",
     "deploy": "git push origin master && git push heroku master",
-    "fdeploy": "git push -f origin master && git push -f heroku master",
-    "build": "ng build --prod",
+    "deployf": "git push -f origin master && git push -f heroku master",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
