--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "heroku-prebuild": "npm install --dev && npm install",
+    "heroku-prebuild": "npm cache clean --force && npm install",
     "start": "python3 server.py",
     "heroku-postbuild": "ng build --aot --prod",
     "deploy": "git push origin master && git push heroku master",
@@ -32,6 +32,7 @@
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
+    "typescript": "~2.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -50,7 +51,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "tslint": "~5.7.0"
   }
 }
