--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "scripts": {
     "ng": "ng",
-    "heroku-prebuild": "npm cache clean --force && npm install",
-    "start": "python3 server.py",
+    "start": ":",
+    "heroku-prebuild": "npm install",
     "heroku-postbuild": "ng build --aot --prod",
     "deploy": "git push origin master && git push heroku master",
     "deployf": "git push -f origin master && git push -f heroku master",
