Fix app.run() & bunch of name errors

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ uvloop
 
 # Fork of sanic that allows blueprint meta-groups
 git+https://github.com/eltrhn/sanic.git
-# Fork of sanic-jwt that allows async setup funcs
+# Fork of sanic-jwt that allows asynchronous setup functions
+# and some other stuff like refresh-token revocation
 git+https://github.com/eltrhn/sanic-jwt.git
