Playing around w trying to get pathlocationstrategy rerouting working

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "ng": "ng",
     "start": ":",
+    "r": "git reset HEAD~1 && git commit -am",
     "heroku-prebuild": "npm install",
     "heroku-postbuild": "ng build --aot --prod",
     "deploy": "git push origin master && git push heroku master",
