--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "ng": "ng",
     "start": ":",
     "r": "git reset HEAD~1 && git commit -am",
+    "d": "git push origin master && git push heroku master",
+    "df": "git push -f origin master && git push -f heroku master",
     "heroku-prebuild": "npm install",
     "heroku-postbuild": "ng build --aot --prod",
-    "deploy": "git push origin master && git push heroku master",
-    "deployf": "git push -f origin master && git push -f heroku master",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
