--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d": "git push origin master && git push heroku master",
     "deploy": "npm run d",
     "df": "git push -f origin master && git push -f heroku master",
+    "deployf": "npm run df",
     "heroku-prebuild": "npm install",
     "heroku-postbuild": "ng build --aot --prod",
     "build": "ng build",
