--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ uvloop
 git+git://github.com/aio-libs/aioredis.git#egg=aioredis
 
 # Fork of sanic that allows blueprint meta-groups
-git+git://github.com/eltrhn/sanic.git@dev#egg=sanic
+git+git://gitlab.com/hdtrhn/sanic-fork.git@dev#egg=sanic
 # Fork of sanic-jwt that allows asynchronous setup functions
-# and some other stuff like refresh-token revocation
-git+git://github.com/eltrhn/sanic-jwt.git#egg=sanic-jwt
+# and some other stuff like refresh-token revocation on logout
+git+git://gitlab.com/hdtrhn/sanic-jwt-fork.git#egg=sanic-jwt
