--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular2-markdown": "github:dimpu/ngx-md#test",
     "core-js": "^2.4.1",
+    "marked": "^0.3.12",
+    "ngx-markdown": "^1.5.0",
     "ngx-md": "^3.1.0",
     "rxjs": "^5.5.2",
     "typescript": "~2.4.2",
