--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "angular2-markdown": "github:dimpu/ngx-md#test",
     "core-js": "^2.4.1",
     "marked": "^0.3.12",
+    "ngx-color-picker": "^5.3.2",
     "ngx-markdown": "^1.5.0",
     "ngx-md": "^3.1.0",
     "rxjs": "^5.5.2",
