--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "engines": {
-    "node": "9.3.0"
+    "node": "9.3.0",
+    "npm": "6.0.x"
   },
   "scripts": {
     "ng": "ng",
